--- a/sources/style/modals.styl
+++ b/sources/style/modals.styl
@@ -15,15 +15,81 @@
     &.is-visible
         opacity 1
 
+    *::selection
+        color #251f2b
+        background-color #ffffff
+
     .modal
         display none
 
         &.is-displayed
             display block
 
-    *::selection
-        color #251f2b
-        background-color #ffffff
+        &.controls
+            .content
+                padding 20px
+
+                @media only screen and (max-width 520px)
+                    padding 20px
+
+                @media only screen and (max-width 420px)
+                    padding 20px
+
+            .list
+                display flex
+                align-items center
+                justify-content center
+
+                .column
+                    &:first-child
+                        text-align right
+                        padding-right 15px
+
+                .list-item
+                    white-space nowrap
+
+                    &.is-gamepad-button
+                        display none
+
+                        &.is-playstation
+                            .is-gamepad-default &
+                            .is-gamepad-playstation &
+                                display block
+
+                        &.is-xbox
+                            .is-gamepad-xbox &
+                                display block
+
+                .gamepad-button
+                    display inline-block
+                    background-size cover
+                    vertical-align middle
+
+                    @media only screen and (max-width 520px)
+                        transform scale(0.8, 0.8)
+
+                    @media only screen and (max-width 420px)
+                        transform scale(0.7, 0.7)
+
+                    &.circle
+                        width 15px
+                        height 15px
+                        background-image url('../ui/controls/gamepad-circle.png')
+
+                    &.triangle
+                        width 16px
+                        height 15px
+                        background-image url('../ui/controls/gamepad-triangle.png')
+
+                    &.square
+                        width 15px
+                        height 15px
+                        background-image url('../ui/controls/gamepad-square.png')
+
+                    &.cross
+                        width 14px
+                        height 13px
+                        background-image url('../ui/controls/gamepad-cross.png')
 
     .container
         display flex
@@ -34,10 +100,10 @@
             width 500px
 
         @media only screen and (max-width 520px)
-            width 400px
+            width calc(100vw - 40px)
 
         @media only screen and (max-width 420px)
-            width 320px
+            width calc(100vw - 20px)
 
     .preview
         display flex
@@ -122,7 +188,126 @@
 
             &:hover
                 opacity 1
-                
+
+            .icon
+                &.is-default
+                    .is-gamepad-xbox &
+                        display none
+
+                &.is-xbox
+                    display none
+                    justify-content center
+                    align-items center
+                    vertical-align bottom
+                    border 2px solid #ffffff
+                    padding-top 2px
+                    width 30px
+                    height 30px
+                    border-radius 15px
+
+                    .is-gamepad-xbox &
+                        display block
+
+        .tabs
+            .tabs-navigation
+                display flex
+                width calc(100% - 80px)
+                margin-bottom 20px
+
+                @media only screen and (max-width 520px)
+                    margin-top 0px
+
+                @media only screen and (max-width 420px)
+                    width calc(100% - 50px)
+
+                .tab
+                    position relative
+                    display flex
+                    flex-direction column
+                    align-items center
+                    height 60px
+                    padding-top 10px
+                    padding-bottom 10px
+                    flex 1
+
+                    &.is-active
+                    &:hover
+                        .icon-container
+                            opacity 0.7
+
+                        .label
+                            opacity 1
+
+                    &.is-active
+                        .active-background
+                            opacity 1
+
+                    .active-background
+                        position absolute
+                        top 0
+                        left 0
+                        width 100%
+                        height 100%
+                        background linear-gradient(to top, rgba(255, 255, 255, 0.02), rgba(255, 255, 255, 0.06))
+                        border-radius 6px
+                        opacity 0
+                        transition opacity 0.3s
+
+                    .icon-container
+                        width 100%
+                        height 40px
+                        display flex
+                        align-items center
+                        justify-content center
+                        opacity 0.25
+                        transition opacity 0.15s
+
+                    .icon-mouse-keyboard
+                            width 37px
+                            height 27px
+                            background url('../ui/controls/mouse-keyboard.png')
+                            background-size cover
+
+                    .icon-touch
+                            width 16px
+                            height 26px
+                            background url('../ui/controls/touch.png')
+                            background-size cover
+
+                    .icon-gamepad
+                            width 34px
+                            height 22px
+                            background url('../ui/controls/gamepad.png')
+                            background-size cover
+
+                    .label
+                        margin-top 5px
+                        font-size 13px
+                        font-weight 700
+                        opacity 0.5
+                        transition opacity 0.15s
+
+            .tabs-content
+                position relative
+            
+            .tabs-content-item
+                display flex
+                align-items center
+                justify-content center
+                position absolute
+                top 0
+                left 0
+                width 100%
+                height 100%
+                opacity 0
+                pointer-events none
+                transition 0.15s
+
+                &.is-active
+                    opacity 1
+                    pointer-events auto
+                    transition-delay 0.15s
+                    
         .input-group
             display flex
             width 100%
