:sparkles: Circuit > Show time in end modal + Lower textures resolution + Fix input category when closing modal

--- a/sources/style/modals.styl
+++ b/sources/style/modals.styl
@@ -388,6 +388,7 @@
         .horizontal-group
             display flex
             align-items flex-end
+            justify-content center
 
             > *
                 margin-right 10px
