:lipstick: Controls > Improve keyboard icon

--- a/sources/style/modals.styl
+++ b/sources/style/modals.styl
@@ -519,21 +519,21 @@
                         transition opacity 0.15s
 
                     .icon-mouse-keyboard
-                            width 37px
-                            height 27px
-                            background url('../ui/controls/mouse-keyboard.png')
+                            width 36px
+                            height 22px
+                            background url('../ui/controls/mouse-keyboard.svg')
                             background-size cover
 
                     .icon-touch
                             width 16px
                             height 26px
-                            background url('../ui/controls/touch.png')
+                            background url('../ui/controls/touch.svg')
                             background-size cover
 
                     .icon-gamepad
                             width 34px
                             height 22px
-                            background url('../ui/controls/gamepad.png')
+                            background url('../ui/controls/gamepad.svg')
                             background-size cover
 
                     .label
