--- a/sources/style/index.styl
+++ b/sources/style/index.styl
@@ -4,5 +4,12 @@
 @import url('./general.styl')
 @import url('./modals.styl')
 @import url('./menu.styl')
+@import url('./tabs.styl')
+@import url('./achievements.styl')
+@import url('./intro.styl')
+@import url('./circuit.styl')
+@import url('./controls.styl')
+@import url('./circuit-end.styl')
+@import url('./whispers.styl')
 @import url('./interactiveButtons.styl')
 @import url('./notifications.styl')
