--- a/sources/style/menu.styl
+++ b/sources/style/menu.styl
@@ -22,10 +22,11 @@
     .inner
         position relative
         width @css{ min(1000px, calc(100vw - 120px)) }
-        height @css{ min(650px, calc(100vh - 120px)) }
+        height @css{ min(600px, calc(100vh - 120px)) }
         
         @media only screen and (orientation portrait)
-            width 500px
+            width @css{ min(600px, calc(100vw - 100px)) }
+            height @css{ max(80vh, calc(100vh - 100px)) }
 
     .container
         position relative
@@ -49,7 +50,7 @@
 
         @media only screen and (orientation portrait)
             width auto
-            min-height 250px
+            height 30%
 
         &::after
             content ''
@@ -60,6 +61,7 @@
             left 3px
             border 1px solid #ffffff
             opacity 0.35
+            pointer-events none
 
         .background
             position absolute
@@ -70,7 +72,6 @@
             object-fit cover
 
         .preview
-            display block
             position absolute
             top 0
             left 0
@@ -89,31 +90,116 @@
     .contents
         position relative
         width 50%
-        padding 25px 40px 40px 40px
         background radial-gradient(ellipse at top left, #251f2b, #1d1721)
+        overflow hidden
 
         @media only screen and (orientation portrait)
             width auto
-
-        @media only screen and (max-width 520px)
-            padding 20px 30px 30px 30px
-
-        @media only screen and (max-width 420px)
-            padding 15px 20px 20px 20px
+            height 70%
 
         .content
             display block
             position absolute
             top 0
             left 0
-            width 100%
+            width calc(100% + 20px)
             height 100%
+            background radial-gradient(ellipse at top left, #251f2b, #1d1721)
             opacity 0
             pointer-events none
+            overflow-x hidden
+            overflow-y scroll
 
             &.is-visible
                 opacity 1
                 pointer-events auto
+
+        .title
+            margin-bottom 0.5em
+
+        .content-inner
+            width @css{ calc(min(1000px, calc(100vw - 120px)) / 2) }
+            padding 25px 40px 40px 40px
+
+            @media only screen and (orientation portrait)
+                width 100%
+
+            @media only screen and (max-width 520px)
+                padding 20px 30px 30px 30px
+
+            @media only screen and (max-width 420px)
+                padding 15px 20px 20px 20px
+
+    /**
+     * Navigation
+     */
+    .navigation
+        display flex
+        position absolute
+        left calc(50% + 10px)
+        bottom 100%
+        gap 3px
+
+        @media only screen and (orientation portrait)
+            left 10px
+
+        .item
+            position relative
+            width 50px
+            height 44px
+
+            --hover-translate 4px
+
+            &:hover
+                .button-inner
+                    transform translateY(-4px)
+
+                    &::after
+                        opacity 0.8
+
+                    .icon-container
+                        opacity 1
+
+            &.is-active
+                .button-inner
+                    background #241e2a
+
+                    .icon-container
+                        opacity 1
+
+            .button-inner
+                position absolute
+                top 0
+                left 0
+                width 100%
+                height calc(100% + var(--hover-translate))
+                background radial-gradient(ellipse at top right, #251f2b, #1d1721)
+                transition transform 0.15s
+
+                &::after
+                    content: ''
+                    display block
+                    position absolute
+                    top 3px
+                    right 3px
+                    bottom 0
+                    left 3px
+                    border 1px solid #ffffff
+                    border-bottom none
+                    opacity 0.35
+                    transition opacity 0.15s
+
+                .icon-container
+                    display flex
+                    position absolute
+                    align-items center
+                    justify-content center
+                    top 3px
+                    right 3px
+                    bottom var(--hover-translate)
+                    left 3px
+                    color #ffceca
+                    opacity 0.65
 
     /**
      * Close
@@ -187,70 +273,3 @@
 
                         .is-mode-gamepad.is-gamepad-xbox &
                             display block
-
-    /**
-     * Navigation
-     */
-    .navigation
-        display flex
-        position absolute
-        left calc(50% + 10px)
-        bottom 100%
-        gap 3px
-
-        @media only screen and (orientation portrait)
-            left 10px
-
-        .item
-            position relative
-            width 44px
-            height 44px
-
-            --hover-translate 4px
-
-            &:hover
-                .button-inner
-                    transform translateY(-4px)
-
-                    &::after
-                        opacity 0.8
-
-            &.is-active
-                .button-inner
-                    background #241e2a
-
-                    .icon-container
-                        color #ffffff
-
-            .button-inner
-                position absolute
-                top 0
-                left 0
-                width 100%
-                height calc(100% + var(--hover-translate))
-                background radial-gradient(ellipse at top right, #251f2b, #1d1721)
-                transition transform 0.15s
-
-                &::after
-                    content: ''
-                    display block
-                    position absolute
-                    top 3px
-                    right 3px
-                    bottom 0
-                    left 3px
-                    border 1px solid #ffffff
-                    border-bottom none
-                    opacity 0.35
-                    transition opacity 0.15s
-
-                .icon-container
-                    display flex
-                    position absolute
-                    align-items center
-                    justify-content center
-                    top 3px
-                    right 3px
-                    bottom var(--hover-translate)
-                    left 3px
-                    color #ffceca
