--- a/sources/style/menu.styl
+++ b/sources/style/menu.styl
@@ -25,8 +25,10 @@
         height @css{ min(600px, calc(100vh - 120px)) }
         
         @media only screen and (orientation portrait)
-            width @css{ min(600px, calc(100vw - 100px)) }
-            height @css{ max(80vh, calc(100vh - 100px)) }
+            left -15px
+            top 20px
+            width @css{ min(600px, calc(100vw - 70px)) }
+            height @css{ max(80vh, calc(100vh - 70px)) }
 
     .container
         position relative
@@ -199,7 +201,7 @@
                     bottom var(--hover-translate)
                     left 3px
                     color #ffceca
-                    opacity 0.65
+                    opacity 0.55
 
     /**
      * Close
