:sparkles: Social > Discord > Open modal with choice

--- a/sources/style/index.styl
+++ b/sources/style/index.styl
@@ -13,3 +13,4 @@
 @import url('./whispers.styl')
 @import url('./interactiveButtons.styl')
 @import url('./notifications.styl')
+@import url('./discord.styl')
